Add Seller API Fix docs
