# cmd/web/handlers.go
@@ -3,6 +3,7 @@ package main
 import (
 	"BackendAPI/api/buyer"
 	"BackendAPI/api/product"
+	"BackendAPI/api/seller"
 	"BackendAPI/data"
 	"net/http"
 
@@ -11,16 +12,16 @@ import (
 
 // handleBuyerSignup godoc
 // @Summary      Signs a new buyer up
-// @Description  Checks to see if a user email exists and if not creates a new account with supplied email and password
+// @Description  Checks to see if a buyer email exists and if not creates a new account with supplied email and password
 // if not returns a bad request error (400).
 // @Accept       json
 // @Produce      json
-// @Param 		 email body string true "Users email"
-// @Param 		 password body string true "Users password as plaintext"
+// @Param 		 email body string true "Buyers email"
+// @Param 		 password body string true "Buyers password as plaintext"
 // @Success      200  {object}  data.BuyerLoginResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      500  {object}  data.Message
-// @Router       /buyers/signup/ [post]
+// @Router       /buyers/signup [post]
 func handleBuyerSignUp(c *gin.Context) {
 	var signUpData data.BuyerSignUpData
 	bindErr := c.ShouldBindJSON(&signUpData)
@@ -44,19 +45,19 @@ func handleBuyerSignUp(c *gin.Context) {
 
 // handleBuyerLogin godoc
 // @Summary      Logs a buyer into their account
-// @Description  Checks to see if a user email exists and if supplied password matches the stored password
+// @Description  Checks to see if a buyer email exists and if supplied password matches the stored password
 // if not returns a unauthorized error (401).
 // @Accept       json
 // @Produce      json
-// @Param 		 email body string true "Users email"
-// @Param 		 password body string true "Users password as plaintext"
+// @Param 		 email body string true "Buyers email"
+// @Param 		 password body string true "Buyers password as plaintext"
 // @Success      200  {object}  data.BuyerLoginResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      401  {object}  data.Message
 // @Failure      500  {object}  data.Message
-// @Router       /buyers/login/ [post]
+// @Router       /buyers/login [post]
 func handleBuyerLogin(c *gin.Context) {
-	var loginData data.BuyerLoginData
+	var loginData data.UserLoginData
 	bindErr := c.ShouldBindJSON(&loginData)
 
 	if bindErr != nil {
@@ -76,44 +77,12 @@ func handleBuyerLogin(c *gin.Context) {
 	c.JSON(http.StatusOK, &loginResponse)
 }
 
-// handleBuyerSignup godoc
-// @Summary      Signs a new buyer up
-// @Description  Checks to see if a user email exists and if not creates a new account with supplied email and password
-// if not returns a bad request error (400).
-// @Accept       json
-// @Produce      json
-// @Param 		 email body string true "Users email"
-// @Param 		 password body string true "Users password as plaintext"
-// @Success      200  {object}  data.BuyerLoginResponseData
-// @Failure      400  {object}  data.Message
-// @Failure      500  {object}  data.Message
-// @Router       /buyers/signup/ [post]
-func handleBuyerSignUp(c *gin.Context) {
-	var signUpData data.BuyerSignUpData
-	bindErr := c.ShouldBindJSON(&signUpData)
-
-	if bindErr != nil {
-		r := data.Message{Message: "Bad Request Body"}
-		c.JSON(http.StatusBadRequest, r)
-		return
-	}
-
-	signUpResponse, err := buyer.BuyerSignUp(db, signUpData)
-
-	if err != nil {
-		r := data.Message{Message: err.Error()}
-		c.JSON(err.ErrorCode(), r)
-		return
-	}
-
-	c.JSON(http.StatusCreated, &signUpResponse)
-}
-
 // handleGetProductById godoc
 // @Summary      Gets a Product by its Product ID
 // @Description  Checks to see if a product with a given id exists and returns its product information if it does.
 // If not it returns a not found error (404)
 // @Produce      json
+// @Param id path string true "product_id"
 // @Success      200  {object}  data.ProductResponseData
 // @Failure      400  {object}  data.Message
 // @Failure      404  {object}  data.Message
@@ -174,12 +143,73 @@ func handleCreateProduct(c *gin.Context) {
 	c.JSON(http.StatusCreated, &product)
 }
 
+// handleSellerSignup godoc
+// @Summary      Signs a new seller up
+// @Description  Checks to see if a seller email does not already exists if so creates a new
+// seller account with supplied email, password and seller_name
+// if not returns a bad request error (400).
+// @Accept       json
+// @Produce      json
+// @Param 		 email body string true "Sellers email"
+// @Param 		 password body string true "Sellers password as plaintext"
+// @Param 		 seller_name body string true "Sellers seller alias that is displayed as their seller name"
+// @Success      200  {object}  data.SellerResponseData
+// @Failure      400  {object}  data.Message
+// @Failure      500  {object}  data.Message
+// @Router       /sellers/signup [post]
 func handleSellerSignUp(c *gin.Context) {
+	var signUpData data.SellerSignUpData
+	bindErr := c.ShouldBindJSON(&signUpData)
 
+	if bindErr != nil {
+		r := data.Message{Message: "Bad Request Body"}
+		c.JSON(http.StatusBadRequest, r)
+		return
+	}
+
+	signUpResponse, err := seller.SellerSignUp(db, signUpData)
+
+	if err != nil {
+		r := data.Message{Message: err.Error()}
+		c.JSON(err.ErrorCode(), r)
+		return
+	}
+
+	c.JSON(http.StatusCreated, &signUpResponse)
 }
 
+// handleSellerLogin godoc
+// @Summary      Logs a seller into their account
+// @Description  Checks to see if a sellers email exists and if supplied password matches the stored password
+// if not returns a unauthorized error (401).
+// @Accept       json
+// @Produce      json
+// @Param 		 email body string true "Sellers email"
+// @Param 		 password body string true "Sellers password as plaintext"
+// @Success      200  {object}  data.SellerResponseData
+// @Failure      400  {object}  data.Message
+// @Failure      401  {object}  data.Message
+// @Failure      500  {object}  data.Message
+// @Router       /sellers/login [post]
 func handleSellerLogin(c *gin.Context) {
+	var loginData data.UserLoginData
+	bindErr := c.ShouldBindJSON(&loginData)
 
+	if bindErr != nil {
+		r := data.Message{Message: "Bad Request Body"}
+		c.JSON(http.StatusBadRequest, r)
+		return
+	}
+
+	loginResponse, err := seller.SellerLogin(db, loginData)
+
+	if err != nil {
+		r := data.Message{Message: err.Error()}
+		c.JSON(err.ErrorCode(), r)
+		return
+	}
+
+	c.JSON(http.StatusOK, &loginResponse)
 }
 
 /*
